# embedded_db

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: db.rs  flash.rs  main.rs  types.rs  uart.rs
