[package]
authors = ["Stavch <stavroschrysanthou@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32l4_kvdb"
version = "0.1.0"
build = "build.rs"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
heapless = "0.8.0"
panic-halt = "1.0.0"
postcard = { version = "1.1.1", default-features = false}
stm32l4xx-hal = { version = "0.7", features = ["stm32l476", "rt"] }
stm32l4 = "0.14"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
embedded-alloc = "0.6.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32l4_kvdb"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations


